# nih-plug

./: Cargo.toml
nih_plug_egui/: Cargo.toml
src/params/: smoothing.rs
